--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Module 10: Simple ecommerce landing page using Bootstrap</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
+
+    <!-- Bootstrap CSS -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,6 +23,10 @@
         <li><a href="lesson-07.html"> </a> </li>
         <li><a href="lesson-08.html"> </a> </li>
     </ol>
+
+    <!-- Optional JavaScript; -->
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
