adding lesson02.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Module 10: Simple ecommerce landing page using Bootstrap</h1>
     <ol>
         <li><a href="lesson-01.html">10-1 Panda commerce overview and project setup</a> </li>
-        <li><a href="lesson-02.html"> </a> </li>
+        <li><a href="lesson-02.html">10-2 Container, set navbar, top banner carousel, image size</a> </li>
         <li><a href="lesson-03.html"> </a> </li>
         <li><a href="lesson-04.html"> </a> </li>
         <li><a href="lesson-05.html"> </a> </li>
