--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ol>
         <li><a href="lesson-01.html">10-1 Panda commerce overview and project setup</a> </li>
         <li><a href="lesson-02.html">10-2 Container, set navbar, top banner carousel, image size</a> </li>
-        <li><a href="lesson-03.html"> </a> </li>
+        <li><a href="lesson-03.html">10-3 Categories, gutters, flex vertical center and sound space</a> </li>
         <li><a href="lesson-04.html"> </a> </li>
         <li><a href="lesson-05.html"> </a> </li>
         <li><a href="lesson-06.html"> </a> </li>
