--- a/lesson-03.html
+++ b/lesson-03.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>10-2 Container, set navbar, top banner carousel, image size</title>
+    <title>10-3 Categories, gutters, flex vertical center and sound space</title>
 
     <!-- Bootstrap CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -34,6 +34,7 @@
             </div>
         </nav>
     </header>
+    <!-- carousel -->
     <section class="container">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <ol class="carousel-indicators">
@@ -77,6 +78,29 @@
             </a>
         </div>
     </section>
+
+    <main>
+        <section class="container overflow-hidden mt-5">
+            <div class="row gx-5 text-white">
+                <div class="col">
+                    <div class="p-3 d-flex align-items-center justify-content-around bg-primary rounded">
+                        <h2 class="h1">Watch</h2> <img src="assets/images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3 d-flex align-items-center justify-content-around bg-danger rounded">
+                        <h2 class="h1">Bag</h2> <img src="assets/images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-3 d-flex align-items-center justify-content-around bg-info rounded">
+                        <h2 class="h1">Shoe</h2> <img src="assets/images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+               
+            </div>
+        </section>
+    </main>
 
 
 
