--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="lesson-04.html">10-4 Shoe shopping card, card-group, card shadow</a> </li>
         <li><a href="lesson-05.html">10-5 Backpack category, card footer, align button</a> </li>
         <li><a href="lesson-06.html">10-6 Subscribe section, horizontal and vertical center</a> </li>
-        <li><a href="lesson-07.html"> </a> </li>
+        <li><a href="lesson-07.html">10-7 Footer, text center, carousel item Vertical center</a> </li>
         <li><a href="lesson-08.html"> </a> </li>
     </ol>
 
